--- a/styles.css
+++ b/styles.css
@@ -1314,11 +1314,8 @@ background-color: #191e23;
 
 .section{
     height: 100%;
-    color: #191e23;
-    background-image: linear-gradient(rgba(0,0,0,1.85), rgba(0,0,0,0.85)),
-    url(https://images.unsplash.com/photo-1579546928937-641f7ac9bced?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=339&q=80); 
-    background-size: cover;
-    background-position: center;
+    color: #ffffff;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1338,28 +1335,28 @@ background-color: #191e23;
 }
 
 .section h4{
-    color: white;
+    color: black;
     font-size: 18px;
     margin-bottom: 20px;
 }
 
 .spanner{
-    color: rgb(0, 228, 87);
+    color: #0E0AEC;
 }
 
 .login-card{
     height: 100%;
     width: 500px;
     background-color: #191e23;
-    border-radius: 10px;
+    border-radius: 4px;
     padding: 1rem 3rem;
     color: white;
     background-color: rgba(255, 255, 255, 0.05);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 12px -2px rgba(186, 186, 186, 0.3);
 }
 
 .login-card h2{
-    color: white;
+    color: black;
     text-align: center;
     margin-top: 40px;
     font-size: 18px;
@@ -1394,7 +1391,7 @@ background-color: #191e23;
     height: 40px;
     border-radius: 5px;
     background: transparent;
-    border: 1px solid #555;
+    border: 1px solid #bebebe;
     font-family: 'Poppins';
     padding-top: 25px;
     padding-bottom: 25px;
@@ -1433,7 +1430,7 @@ background-color: #191e23;
     text-decoration: none;
     color: white;
     width: 100%;
-    background-color: rgb(0, 228, 87);
+    background-color: #0E0AEC;
     text-align: center;
     border-radius: 5px;
     padding: 15px 0;
@@ -1504,7 +1501,7 @@ background-color: #191e23;
 
     .login-card p{
         font-size: 10px;
-        color: #d2d2d2;
+        color: #797979;
     }
 
     .icon{
