--- a/styles.css
+++ b/styles.css
@@ -1352,14 +1352,15 @@ background-color: #191e23;
     padding: 1rem 3rem;
     color: white;
     background-color: rgba(255, 255, 255, 0.05);
-    box-shadow: 0 1px 12px -2px rgba(137, 137, 137, 0.3);
+    box-shadow: 0 1px 12px 4px rgba(208, 208, 208, 0.3);
 }
 
 .login-card h2{
     color: black;
     text-align: center;
     margin-top: 40px;
-    font-size: 18px;
+    margin-bottom: 24px;
+    font-size: 20px;
 }
 
 
@@ -1395,7 +1396,7 @@ background-color: #191e23;
     font-family: 'Poppins';
     padding-top: 25px;
     padding-bottom: 25px;
-    color: white;
+    color: black;
   }
 
   .login-card2 .input-field {
@@ -1420,7 +1421,7 @@ background-color: #191e23;
     height: 45px;
     border-radius: 5px;
     font-family: 'Poppins';
-    background-color: rgb(0, 228, 87);
+    background-color: #0E0AEC;
     color: white;
     margin-top: 20px;
     border: none;
@@ -1463,7 +1464,7 @@ background-color: #191e23;
 
   .create a{
     text-decoration: none;
-    color: white;
+    color: black;
   }
 
   .alat{
@@ -1560,9 +1561,9 @@ background-color: #191e23;
     .section1b{
         width: 100%;
         height: 100vh;
-        background-color: #191e23;
+        background-color: #fff;
         padding: 25px 0.5rem;
-        color: white;
+        
         display: flex;
         flex-direction: column;
         
@@ -1710,6 +1711,7 @@ background-color: #191e23;
     font-weight: normal;
     margin-bottom: 8px;
     margin-top: 8px;
+    color: #000;
   }
 
   .coverbtn {
@@ -1834,11 +1836,12 @@ background-color: #191e23;
 
   .profile-header-dashboard a {
     text-decoration: none;
-    color: white;
+    color: black;
   }
 
   #paragraph{
     font-size: 10px;
+    color: #000;
   }
 
  .very{
@@ -1863,7 +1866,7 @@ background-color: #191e23;
 .dashboardbox {
     width: 100%;
     height: 140px;
-    background: rgb(0, 228, 87);
+    background: #0E0AEC;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -1881,7 +1884,7 @@ background-color: #191e23;
 
   .dashboardbox2 {
     width: 100%;
-    background: rgb(0, 228, 87);
+    background: #0E0AEC;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -1941,9 +1944,10 @@ background-color: #191e23;
 
   .dash-option {
     height: 100px;
-    background: #232b32;
+    background: #f3f3f3;
     padding: 0.5rem;
     display: flex;
+    color: black;
     flex-direction: column;
     justify-content: start;
     border-radius: 10px;
@@ -1951,7 +1955,7 @@ background-color: #191e23;
 
   #dash-subtitle {
     font-size: 8px;
-    color: #b5b5b5;
+    color: #7b7b7b;
   }
 
   .dash-option i{
@@ -1979,8 +1983,10 @@ background-color: #191e23;
     width: 100%;
     height: 50px;
     display: flex;
-    background: #232b32;
+    background-color: rgba(255, 255, 255, 0.05);
+    box-shadow: 0 6px 12px -6px rgba(133, 133, 133, 0.3);
     padding-left: 10px;
+    color: black;
     margin-bottom: 20px;
     justify-content: space-between;
   }
@@ -1998,6 +2004,7 @@ background-color: #191e23;
   .one-cont i {
     font-size: 8px;
     margin-right: 2px;
+    color: #fff;
   }
 
   .i-background {
@@ -2006,7 +2013,7 @@ background-color: #191e23;
     padding-right: 2px;
     display: flex;
     align-items: center;
-    background-color: rgb(0, 228, 87);
+    background-color: #a6a5ff;
     margin-left: 8px;
   }
 
@@ -2082,6 +2089,7 @@ background-color: #191e23;
 
   #heading { 
     font-size: 14px;
+    color: black;
   }
 
   .details2 {
