--- a/styles.css
+++ b/styles.css
@@ -2031,7 +2031,7 @@ background-color: #191e23;
 
     .repaymentbox {
         width: 100%;
-        background: #232b32;
+        background: #0E0AEC;
         border-radius: 10px;
         display: flex;
         flex-direction: column;
@@ -2061,7 +2061,7 @@ background-color: #191e23;
 
 .repay-cont{
     width: 100%;
-    background: #232b32;
+    background: #e4e3ff;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -2076,7 +2076,7 @@ background-color: #191e23;
 
   .divider3{
     width: 100%;
-    background: rgb(95, 95, 95);
+    background: rgb(179, 179, 179);
     height: 1px;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -2085,6 +2085,7 @@ background-color: #191e23;
 
   #back {
     margin-bottom: 10px;
+    color: black;
   }
 
   #heading { 
@@ -2096,6 +2097,7 @@ background-color: #191e23;
     width: 100%;
     display: flex;
     flex-direction: row;
+    color: #0E0AEC;
   }
 
   .repay-cont a{
@@ -2153,9 +2155,9 @@ background-color: #191e23;
   .section6b {
     width: 100%;
     height: 100vh;
-    background-color: #191e23;
+    background-color: #fff;
     padding: 25px 0.5rem;
-    color: white;
+    color: black;
     display: flex;
     flex-direction: column;
 }
@@ -2190,7 +2192,7 @@ background-color: #191e23;
 .accountbox {
     width: 100%;
     height: 140px;
-    background: rgb(0, 228, 87);
+    background: #0E0AEC;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -2208,7 +2210,7 @@ background-color: #191e23;
 
   .accountbox2 {
     width: 100%;
-    background: rgb(0, 228, 87);
+    background: #0E0AEC;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -2240,7 +2242,7 @@ background-color: #191e23;
   .acctsmallcont{
     width: 100%;
     height: 40px;
-    background: #232b32;
+    background: #010035;
     display: flex;
     margin-top: 10px;
     border-radius: 5px;
@@ -2253,6 +2255,10 @@ background-color: #191e23;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  #bb{
+    color: black;
   }
 
   .acct-line {
@@ -2321,7 +2327,7 @@ background-color: #191e23;
   }
   
   #fabButton {
-    background-color: rgb(0, 228, 87);
+    background-color: #0E0AEC;
     color: #fff; /* Text color */
     border: none;
     border-radius: 50%; /* Make it circular */
