--- a/identity.css
+++ b/identity.css
@@ -13,7 +13,7 @@
 }
 
 .login-card h2{
-    color: white;
+    color: black;
     text-align: center;
     margin-top: 40px;
     font-size: 18px;
@@ -23,7 +23,7 @@
 .login-card form{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
 
 .input-container {
@@ -84,8 +84,7 @@ body{
     color: #191e23;
     background-size: cover;
     background-position: center;
-    background-image: linear-gradient(rgba(0,0,0,1.85), rgba(0,0,0,0.85)),
-    url(https://images.unsplash.com/photo-1579546928937-641f7ac9bced?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=339&q=80); 
+    
 }
 
 
@@ -96,12 +95,9 @@ body{
 
 .section{
     /** height: 100vh; **/
-    color: #191e23;
-    background-image: linear-gradient(rgba(0,0,0,1.85), rgba(0,0,0,0.85)),
-    url(https://images.unsplash.com/photo-1579546928937-641f7ac9bced?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=339&q=80); 
-    background-size: cover;
-    background-position: center;
-    /* display: flex; */
+    color: #fff;
+    background-color: rgba(255, 255, 255, 0.05);
+    box-shadow: 0 6px 12px -6px rgba(133, 133, 133, 0.3);
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -120,7 +116,7 @@ body{
 }
 
 .section h4{
-    color: white;
+    color: black;
     font-size: 18px;
     margin-top: -50px;
     text-align: start;
@@ -134,7 +130,7 @@ body{
     background-color: #191e23;
     border-radius: 10px;
     padding: 1rem 3rem;
-    color: white;
+    color: black;
     background-color: rgba(255, 255, 255, 0.05);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
@@ -150,7 +146,7 @@ body{
 .login-card form{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 12px;
 }
 
 .input-container {
@@ -174,11 +170,11 @@ body{
     height: 40px;
     border-radius: 5px;
     background: transparent;
-    border: 1px solid #555;
+    border: 1px solid #c0c0c0;
     font-family: 'Poppins';
     padding-top: 25px;
     padding-bottom: 25px;
-    color: white;
+    color: black;
   }
 
   .login-card2 .input-field {
@@ -208,7 +204,7 @@ body{
     text-decoration: none;
     color: white;
     width: 100%;
-    background-color: rgb(0, 228, 87);
+    background-color: #0E0AEC;
     text-align: center;
     margin-top: 30px;
     border-radius: 5px;
@@ -245,6 +241,7 @@ body{
 
     .login-card p{
         font-size: 12px;
+        color: black;
     }
 
   
@@ -270,7 +267,7 @@ body{
     border-radius: 5px;
     font-size: 10px;
     background: transparent;
-    border: 1px solid #555;
+    border: 1px solid #c0c0c0;
   }
 
   .gender-list label{
@@ -317,7 +314,7 @@ body{
     height: 0;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
-    border-top: 6px solid #fff;
+    border-top: 6px solid #000;
     transition: 0.3s;
 }
 
@@ -389,21 +386,21 @@ background: #23242a;
     align-items: center;
     border-radius: 5px;
     background: transparent;
-    border: 1px solid #555;
+    border: 1px solid #c0c0c0;
     font-family: 'Poppins';
     padding-top: 25px;
     padding-bottom: 25px;
-    color: white;
+    color: black;
 }
 
 .menu2{
     list-style: none;
     padding: 0.2em 0.5em;
-    background: #323741;
+    background: #0E0AEC;
     border: 1px #363a43 solid;
     box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
     border-radius: 0.5em;
-    color: #9fa5b5;
+    color: #ffffff;
     position: absolute;
     top: 3em;
     left: 50%;
@@ -428,12 +425,12 @@ background: #23242a;
     margin-right: 8px;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
-    border-top: 6px solid #fff;
+    border-top: 6px solid #b1b1b1;
     transition: 0.3s;
 }
 
 .selected2{
-  color: white;
+  color: black;
   font-size: 12px;
 }
 
@@ -455,7 +452,7 @@ background: #23242a;
 }
 
 .menu2 li.active2 {
-  background-color: rgb(0, 170, 65);
+  background-color: #030032;
   color: #fff;
 }
 
