--- a/styles.css
+++ b/styles.css
@@ -1562,8 +1562,7 @@ background-color: #191e23;
         width: 100%;
         height: 100vh;
         background-color: #fff;
-        padding: 25px 0.5rem;
-        
+        padding: 25px 1.2rem;
         display: flex;
         flex-direction: column;
         
@@ -1700,7 +1699,7 @@ background-color: #191e23;
   .amountbox {
     width: 100%;
     height: 80px;
-    background: rgb(0, 228, 87);
+    background: #0E0AEC;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -1746,10 +1745,11 @@ background-color: #191e23;
   .smallcont{
     width: 100%;
     height: 40px;
-    background: #232b32;
+    background: #030032;
     display: flex;
     justify-content: space-between;
-    margin-top: 10px;
+    margin-top: 16px;
+    border-radius: 4px;
     margin-bottom: 20px;
     padding-left: 10px;
     padding-right: 10px;
@@ -1795,28 +1795,31 @@ background-color: #191e23;
   }
 
   .durationsmall {
-    background: #232b32;
+    background: #f3f3f3;
     padding: 0.5rem;
     width: 85px;
     display: flex;
     row-gap: 8px;
     justify-content: center;
+    color: black;
     border-radius: 10px;
   }
 
   .smallcont2{
     width: 100%;
     height: 100px;
-    background: #232b32;
+    background: #efefef;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-top: 40px;
+    border-radius: 4px;
     margin-bottom: 40px;
     padding: 10px;
   }
   .smallcont2 p {
     font-size: 10px;
+    color: #000;
   }
 
   .details {
@@ -2288,7 +2291,7 @@ background-color: #191e23;
   
   .modal-content {
     position: relative;
-    background-color: #191e23;
+    background-color: #030032;
     margin: 100% auto;
     padding: 20px;
     transition: 0.8s ease-in;
@@ -2480,7 +2483,7 @@ background-color: #191e23;
     margin: 10px auto;
     text-align: center;
     cursor: pointer;
-    color: #333;
+    color: #fff;
 }
 
 
@@ -2502,10 +2505,10 @@ background-color: #191e23;
 
 .btnz{
     text-decoration: none;
-    color: white;
+    color: black;
     width: 50%;
     height: 50px;
-    background-color: rgb(0, 228, 87);
+    background-color: white;
     text-align: center;
     border-radius: 5px;
     padding: 15px 0;
@@ -2515,6 +2518,7 @@ background-color: #191e23;
 .btnz2{
     background-color: transparent;
     border: 1px solid #777;
+    color: #fff;
 }
 
 
@@ -2557,12 +2561,14 @@ background-color: #191e23;
   .smallcont6{
     width: 100%;
     height: 220px;
-    background: #232b32;
+    background: #f0f0f0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-top: 20px;
     margin-bottom: 40px;
+    border-radius: 4px;
+    color: black;
     padding: 10px;
   }
   .smallcont6 p {
