--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,7 @@ color: #000;
     border-radius: 50%;
     margin-bottom: 10px;
     display: flex;
+    color: #030032;
     justify-content: center;
     align-items: center;
 }
@@ -381,7 +382,7 @@ margin-bottom: 20px;
     width: 270px;
     height: 500px;
     border-radius: 10px;
-    background: url(images/phone.png);
+    background: url(images/phone2.png);
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -433,7 +434,7 @@ margin-bottom: 20px;
 }
 
 .ratings i{
-    color: rgb(0, 228, 87);;
+    color: #8684ff;
 }
 
 .review-card{
@@ -1141,7 +1142,7 @@ background-color: #191e23;
 }
 
 .section5{
-    background-color: #181818;
+    background-color: #030032;
     padding-bottom: 8rem;
 }
 
@@ -1167,7 +1168,7 @@ background-color: #191e23;
 }
 
 .dive h4{
-    color: rgb(0, 192, 74);
+    color: #0E0AEC;
     font-size: 20px;
 }
 
@@ -1180,7 +1181,7 @@ background-color: #191e23;
 }
 
 .section5 button{
-    background-color: rgb(0, 192, 74);
+    background-color: #0E0AEC;
     text-align: center;
     padding: 10px 20px;
     border: none;
