--- a/identity.css
+++ b/identity.css
@@ -397,7 +397,7 @@ background: #23242a;
     list-style: none;
     padding: 0.2em 0.5em;
     background: #0E0AEC;
-    border: 1px #363a43 solid;
+    border: 1px #0E0AEC solid;
     box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
     border-radius: 0.5em;
     color: #ffffff;
