--- a/styles.css
+++ b/styles.css
@@ -1550,7 +1550,7 @@ background-color: #191e23;
 .section1b{
     width: 100%;
     height: 100vh;
-    background-color: #191e23;
+    background-color: #fff;
     padding: 25px 0.5rem;
     color: white;
     display: flex;
