--- a/styles.css
+++ b/styles.css
@@ -2591,3 +2591,19 @@ background-color: #191e23;
     margin-left: 4px;
   }
 
+
+
+  .style{
+    background-color: blue;
+    height: 200px;
+    width: 50%;
+    border-radius: 50px;
+    margin-right: 100px;
+  }
+
+  .style2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+  }
