--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ nav{
 
 }
 nav span{
-    color: rgb(36, 32, 255);
+    color: rgb(60, 57, 255);
 }
 
 nav ul{
@@ -105,7 +105,7 @@ nav a{
 .col2 h2{
     margin-bottom: 10px;
     font-size: 40px;
-    color: #161616;
+    color: #ffffff;
 }
 
 .labels{
@@ -2452,7 +2452,7 @@ background-color: #191e23;
 
   #requestButton {
     padding: 10px 20px;
-    background-color: rgb(36, 32, 255);
+    background-color: rgb(60, 57, 255);
     color: white;
     font-family: "DM Sans";
     border: none;
